# fastapi-boilerplate

./: Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: README  env.py
models/: __init__.py  base.py  user.py
service/: __init__.py  cache.py  database.py
utils/: __init__.py  exceptions.py  helpers.py  serializers.py
