[project]
name = "paddybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.3",
    "asyncpg>=0.30.0",
    "bcrypt==4.2.0",
    "fastapi==0.115.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.1.1",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.31.0",
]
